kubernetes/app/main/kite/kite/http.httproute.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kite-http
spec:
  parentRefs:
     - name: default
       namespace: istio-system
       kind: Gateway
       sectionName: http-wildcard
     - name: default
       namespace: istio-system
       kind: Gateway
       sectionName: http-wildcard-local
  hostnames:
    - kite.${LOCAL_DOMAIN}
    - kite.${PUBLIC_DOMAIN}
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
