kubernetes/app/main/kite/kite/https.httproute.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kite-https
spec:
  parentRefs:
     - name: default
       namespace: istio-system
       kind: Gateway
       sectionName: https-wildcard
     - name: default
       namespace: istio-system
       kind: Gateway
       sectionName: https-wildcard-local
  hostnames:
    - kite.${LOCAL_DOMAIN}
    - kite.${PUBLIC_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kite-kite
          port: 8080
